# r-shmup_1

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: characters.ron  player.ron
assets/prefabs/: camera.ron  player.ron
config/: bindings.ron  display.ron
precompile/: Cargo.toml
precompile/src/: bindings.rs  lib.rs
src/: main.rs
src/components/: mod.rs  player.rs  prefab.rs
src/states/: gameplay.rs  loading.rs
src/systems/: mod.rs  move_player.rs
